# Open_Cluster_AI_Station_beta

./: .gitignore  GQA_cluster_chat_v1.py  GQA_cluster_transformer_v1.py  README.md  install.sh  mamba_cluster_chat_v1.py  mamba_cluster_transformer.py  quick_start.sh
GQA_cluster_transformer/: llama_cluster_transformer.py  transformer_model_handler.py
GUI/: open_cluster_UI.py
GUI/cluster_configs/: 4_node_config.json  4_node_config2.json  desktop_laptop.json  test.json
cluster_matrix/: README.md  cluster_matrix_remote.py  cluster_matrix_v1 copy 4.py  cluster_matrix_v1.py  start_script.sh
cluster_matrix/cluster_matrix_main/: cluster_matrix_v1.py  cluster_matrix_zmq.py
cluster_matrix/cluster_matrix_test_scripts/: cluster_matrix_repeat_test.py  cluster_matrix_reshape_test.py  cluster_matrix_test.py  cluster_matrix_test_add.py  cluster_matrix_test_dataType.py  cluster_matrix_test_singleNode.py  cluster_matrix_time_bench.py  cluster_send_back_test.py  flash_atten_test.py  ssm_wight_test.py
cluster_matrix/ggml/: CMakeLists.txt  get_land_interface.sh
cluster_matrix/ggml/cluster_backend/: CMakeLists.txt
cluster_matrix/ggml/cluster_backend/cluster_backend_main/: CMakeLists copy.txt  CMakeLists.txt  llama_zmq_server copy.cpp  matrix_backend.hpp  matrix_zmq_server copy.cpp  matrix_zmq_server.cpp
cluster_matrix/ggml/src/: CMakeLists.txt
install/: build_ggml_backend.sh  install_libtorch.sh  install_py_env.sh
mamba_ssm/: __init__.py
mamba_ssm/models/: mixer_seq_simple.py
mamba_ssm/modules/: block.py  mamba2.py  mamba2_simple.py  mamba_simple.py
mamba_ssm/ops/: selective_scan_interface.py
mamba_ssm/utils/: MambaWeightExtractor.py  cluster_matrix.py  generation.py
quick_start/: get_land_ips.sh  set_up_ssh.sh
